메인페이지_대외상세페이지_이미지연결수정

--- a/clubpage/clubpage.html
+++ b/clubpage/clubpage.html
@@ -47,7 +47,7 @@
   <section class="title">
     <div class="wrap">
       <figure>
-        <img src="/clubpage/대외활동예시포스터.jpg" alt="">
+        <img src="대외활동예시포스터.jpg" alt="">
       </figure>
         <div class="content">
           <h1>십시일반 신입 사무국원 추가 모집</h1>
