--- a/mainpage/index.html
+++ b/mainpage/index.html
@@ -134,7 +134,7 @@
             <span><b>&lt;도서 기대평 이벤트&gt;</b></span>
             <span class="small_event">이벤트</span>
           </p>
-          <img src="/mainpage/이벤트.JPG" alt="" class="event_picture"/>
+          <img src="./이벤트.JPG" alt="" class="event_picture"/>
           <figure>
             <h3>&lt;문제적 캐릭터 심리 사전&gt; 도서 이벤트</h3>
             <p>&lt;이문제적 캐릭터 심리 사전&gt;<br/> 기대평을 남겨주시면, 추첨을 통해 도서를 증정 드립니다.</p>
@@ -148,7 +148,7 @@
             <span><b>&lt;내 친한 친구의 아침식사&gt;</b></span>
             <span class="small_event">이벤트</span>
           </p>
-          <img src="/mainpage/이벤트2.JPG" alt="" class="event_picture"/>
+          <img src="./이벤트2.JPG" alt="" class="event_picture"/>
           <figure>
             <h3>&lt;내 친한 친구의 아침식사 시사 초대&gt;</h3>
             <p>&lt;시사 초대 이벤트&gt;<br/>내 친한 친구의 아침식사 예고편 확인 후 이벤트를 신청하면 추첨을 통해 시사회에 초대합니다</p>
