대외_메인 페이지 수정

--- a/main_page/index.html
+++ b/main_page/index.html
@@ -74,7 +74,7 @@
 <div class="container">
     <div class="ad">
         <a href="#none">
-            <img src="" alt="">
+            <img src="images/banner.jpg" alt="">
         </a>
     </div>
     <div class="horizontal">
@@ -129,16 +129,15 @@
     <div class="list">
         <div class="item">
                 <a class="top" href="">
-                    <img src="" alt="">
+                    <img src="images/m3.jpg" alt="">
                     <p class="badges">
-                        <span>마케터</span>
-                        <span>강연/행사</span>
+                        <span>서포터즈</span>
                     </p>
-                    <h2>[오비맥주 마케팅 스쿨]신입생 모집(~09/29)</h2>
-                    <p class="company">오비맥주</p>
+                    <h2>2030 부산월드엑스포 제9회 국제콘퍼런스 서포터즈 모집</h2>
+                    <p class="company">2030부산세계박람회 유치위원회,부산광역시,대한상공회의소</p>
                     <p class="info">
                         <span class="dday highlight">D-8</span>
-                        <span class="viewcount"><i class="fa fa-eye"></i> 7</span>
+                        <span class="viewcount"><i class="fa fa-eye"></i> 2,030</span>
                     </p>
                     <!-- <hr> -->
                 </a>
@@ -160,16 +159,16 @@
         </div>
         <div class="item">
                 <a class="top" href="">
-                    <img src="" alt="">
+                    <img src="images/m4.jpg" alt="">
                     <p class="badges">
                         <span>마케터</span>
                         <span>강연/행사</span>
                     </p>
-                    <h2>[오비맥주 마케팅 스쿨]신입생 모집(~09/29)</h2>
+                    <h2>[오비맥주 마케팅 스쿨]신입생 모집(~12/20)</h2>
                     <p class="company">오비맥주</p>
                     <p class="info">
                         <span class="dday highlight">D-8</span>
-                        <span class="viewcount"><i class="fa fa-eye"></i> 7</span>
+                        <span class="viewcount"><i class="fa fa-eye"></i> 3,200</span>
                     </p>
                     <!-- <hr> -->
                 </a>
@@ -202,7 +201,7 @@
                     <p class="company">토마토집통</p>
                     <p class="info">
                         <span class="dday highlight">D-8</span>
-                        <span class="viewcount"><i class="fa fa-eye"></i> 7</span>
+                        <span class="viewcount"><i class="fa fa-eye"></i> 7,099</span>
                     </p>
                     <!-- <hr> -->
                 </a>
