메인 대외활동 연결

--- a/clubpage/clubpage.html
+++ b/clubpage/clubpage.html
@@ -22,14 +22,14 @@
     <nav class="navbar">
       <div class="navbar_logo">
         <i class="fa-solid fa-school"></i>
-        <a href="../mainpage_header/index.html">
+        <a href="../mainpage/index.html">
           &nbsp;&nbsp;모터디
         </a>
       </div>
 
       <ul class="navbar_menu">
-        <li><a href="#">홈</a></li>
-        <li><a href="#">대외활동</a></li>
+        <li><a href="../mainpage/index.html">홈</a></li>
+        <li><a href="../mainpage_activity/index.html">대외활동</a></li>
         <li><a href="#">스터디</a></li>
       </ul>
     
@@ -79,7 +79,7 @@
   </iframe>
   <footer>
     <div>
-      <a href=""><b>&copy;모터디</b></a>
+      <a href="../mainpage/index.html"><b>&copy;모터디</b></a>
       <a href="">이용약관</a>
       <a href=""><b>개인정보처리방침</b></a>
       <a href="">커뮤니티이용규칙</a>
