--- a/mainpage/index.html
+++ b/mainpage/index.html
@@ -25,7 +25,7 @@
 
       <ul class="navbar_menu">
         <li><a href="./index.html">홈</a></li>
-        <li><a href="../clubpage/clubpage.html">대외활동</a></li>
+        <li><a href="../mainpage_activity/index.html">대외활동</a></li>
         <li><a href="#">스터디</a></li>
       </ul>
 
@@ -74,7 +74,7 @@
     </nav>
     <section>        
       <article>
-        <a href="">대외활동</a>
+        <a href="../mainpage_activity/index.html">대외활동</a>
           <div>봉사, 서포터즈 등 대외활동 소식을 확인하고, 함께 참여할 대학생 팀원을 모집해보세요.</div>
             <ul class="list_activity">
               <li>
